# webgl-loader

./: CMakeLists.txt  NOTICE  README  README.md
data/: analyze.sh
include/webgl-loader/: base.h  base.hpp  bounds.h  bounds.hpp  compress.h  compress.hpp  json.h  json.hpp  mesh.h  mesh.hpp  optimize.h  optimize.hpp  stream.h  stream.hpp  utf8.h  utf8.hpp
src/: CMakeLists.txt  base.cpp  bounds.cpp  compress.cpp  json.cpp  mesh.cpp  optimize.cpp  stream.cpp  utf8.cpp
src/all-codepoints/: CMakeLists.txt  main.cc
src/bounds-test/: CMakeLists.txt  main.cc
src/compress-test/: CMakeLists.txt  main.cc
src/face-list-test/: CMakeLists.txt  main.cc
src/good-codepoints/: CMakeLists.txt  main.cc
src/hex-sanity/: CMakeLists.txt  main.cc
src/histo/: CMakeLists.txt  main.cc
src/json-test/: CMakeLists.txt  main.cc
src/obj2utf8/: CMakeLists.txt  main.cc
src/obj2utf8x/: CMakeLists.txt  main.cc
src/objanalyze/: CMakeLists.txt  main.cc
src/objcompress/: CMakeLists.txt  main.cc
src/stream-test/: CMakeLists.txt  main.cc
src/wavefront-obj-file-test/: CMakeLists.txt  main.cc
utils/: CMakeLists.txt
utils/all-codepoints/: CMakeLists.txt  main.cpp
utils/bounds-test/: CMakeLists.txt  main.cpp
utils/compress-test/: CMakeLists.txt  main.cpp
utils/face-list-test/: CMakeLists.txt  main.cpp
utils/good-codepoints/: CMakeLists.txt  main.cpp
utils/hex-sanity/: CMakeLists.txt  main.cpp
utils/histo/: CMakeLists.txt  main.cpp
utils/json-test/: CMakeLists.txt  main.cpp
utils/obj2utf8/: CMakeLists.txt  main.cpp
utils/obj2utf8x/: CMakeLists.txt  main.cpp
utils/objanalyze/: CMakeLists.txt  main.cpp
utils/objcompress/: CMakeLists.txt  main.cpp
utils/stream-test/: CMakeLists.txt  main.cpp
utils/wavefront-obj-file-test/: CMakeLists.txt  main.cpp
